# basic-sql-rag

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  app.py  build_index.py  coverage.py  database_executor.py  db_config.py  load_db.py  pipeline.py  pyproject.toml  pytest.ini  question_engine.py  requirements.txt  retriever.py  setup.md
benchmarks/spider2_snow/: DATASET.md  README.md  prepare_subsets.py  requirements-spider2-snow.txt  run_direct_sql.py
data/: few_shot_queries.json  schema_dicts.json  schema_llm.txt  semantic_model.json  semantic_registry.json
data/semantic_model/: customers.json  geography.json  inventory.json  order_items.json  orders.json  products.json  sales.json
docs/: evaluation.md  implementation_plan.md  metadata-layer-plan.md  multi_step_questioning_plan.md  pipeline.md  pipeline_deep_dive.md  source_layout.md
docs/modules/: example_retrieval.md  feedback_examples.md  metadata_grounding.md  prompting.md  question_signals.md  retry.md  schema_graph.md  schema_linking.md  (+1 more)
scripts/: build_method_report.py
sql/: 00_simple_schema.sql
tests/: conftest.py  sql.py  test_artifacts.py  test_core_pipeline.py  test_coverage.py  test_database_executor.py  test_db_config.py  test_dynamic_retry.py  test_example_retrieval.py  test_feedback_examples.py  test_metadata_grounding.py  test_pipeline.py  test_prompting.py  test_question_engine.py  test_question_signals.py  test_retry_pipeline.py  test_schema_graph.py  test_schema_index.py  test_schema_linking.py  test_semantic_profiles.py  test_spider2_snow_setup.py  test_vector_store.py
(+84 files in other folders)
