[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon"
version = "0.1.0"
description = "A small metadata-grounded natural-language-to-SQL research MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.50",
    "llama-index>=0.14",
    "llama-index-embeddings-openai>=0.6",
    "numpy>=2.4",
    "openai>=2.30",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.2",
    "sentence-transformers>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
beacon-index = "beacon.indexing.builder:main"
beacon-load-db = "beacon.app.load_db:main"
beacon-ui = "beacon.app.ui:main"
beacon-ask = "beacon.runtime.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
cache_dir = "tests/.pytest_cache"
addopts = "--basetemp=tests/.pytest_tmp"
norecursedirs = [
    ".git",
    ".pytest_cache",
    ".pytest_tmp",
    "tests/.pytest_cache",
    "tests/.pytest_tmp",
]
